--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "homepage": "http://harshekjain.com",
             "role": "Developer"
         }
-    ]
+    ],
+    "require": {
+        "php": ">=7.2"
+    }
 }
